refactor(#2964): Fix time zone bug in timestamp rule